# mass-simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
react-app/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
react-app/src/: App.jsx  CollisionBalls.jsx  MenuBar.jsx  Particles.jsx  constants.js  main.jsx
